build: setup github pages deployment

--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    "homepage": "https://ramgopal96.github.io/Chat-box-lab-variants",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@phosphor-icons/react": "^2.1.10",
